--- a/TheTime/src/CalendarConfig.yml
+++ b/TheTime/src/CalendarConfig.yml
@@ -23,6 +23,9 @@
 #  
 # Info:
 #   'size:' will be the minimum size of the inventory.
+#   'toggle:' if you set this to false the item will not be displayed.
+#   'amount:' The amount can also be a placeholder.
+#   'lore:' if you remove this parameter there will be no lore displayed. (Don't leave it there with no value it will cause errors)
 # 
 title: '%dayName% the %day% - %monthName% - %year%'
 size: 9
@@ -34,7 +37,7 @@ items:
     id: 5
     amount: '%day%'
     lore:
-      - Today is the &4%day% %month%&r!
+    - '&oToday we have the %day% %monthName%!'
   day:
     toggle: true
     name: '&2%day%'
@@ -42,11 +45,12 @@ items:
     id: 0
     amount: '%day%'
     lore:
-      - Just antoher day...
+    - A day.
   week:
     toggle: true
     name: '&3Week %week%'
     material: STAINED_GLASS_PANE
-    id: 2
+    id: 7
     amount: '%week%'
     lore:
+    - Have a nice week!
