--- a/TheTime/src/CalendarConfig.yml
+++ b/TheTime/src/CalendarConfig.yml
@@ -27,7 +27,7 @@
 #   'amount:' The amount can also be a placeholder.
 #   'lore:' if you remove this parameter there will be no lore displayed. You can also add it again.(Don't leave it there with no value it will cause errors)
 # 
-title: '%dayName% the %day% - %monthName% - %year%'
+title: '%dayName% %day%. %monthName% - %year%'
 size: 9
 items:
   today:
