--- a/TheTime/bin/CalendarConfig.yml
+++ b/TheTime/bin/CalendarConfig.yml
@@ -27,17 +27,17 @@
 #   'amount:' The amount can also be a placeholder.
 #   'lore:' if you remove this parameter there will be no lore displayed. You can also add it again.(Don't leave it there with no value it will cause errors)
 # 
-title: '%dayName% %day%. %monthName% - %year%'
+title: '%dayName%, %day%. %monthName% - %year%'
 size: 9
 items:
   today:
     toggle: true
-    name: '&4Today'
+    name: '&2%day%'
     material: STAINED_GLASS_PANE
     id: 5
     amount: '%day%'
     lore:
-    - '&r%dayName% the %day%. %monthName%!'
+    - '&r%dayName%'
   day:
     toggle: true
     name: '&2%day%'
